Fri Oct 11 20:58:16 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: use terminology `full_mark' instead of `minor_gc'
	  in mark functions.

Fri Oct 11 20:46:09 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: use __GNUC__ instead of __GCC__.

Fri Oct 11 20:35:59 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c, parse.y: support generational Symbol relatetd marking.
	  Each symbols has String objects respectively to represent
	  Symbols.
	  These objects are marked only when:
	  * full marking
	  * new symbols are added
	  This hack reduce symbols (related strings) marking time.
	  For example, on my Linux environment, the following code
	    "20_000_000.times{''}"
	  with 40k symbols (similar symbol number on Rails 3.2.14 app,
	  @jugyo tells me) boosts, from 7.3sec to 4.2sec.

`	* internal.h: change prototype of rb_gc_mark_symbols().

Fri Oct 11 19:27:22 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el: Import ruby-electric.el 2.0.1 which fixes
	  a bug and a flaw with auto-end introduced in the revamp.

	  * ruby-forward-sexp is inappropriate here because it moves the
	    cursor past the keyword.

	  * Fix a reversed looking-back check in
	    ruby-electric--block-beg-keyword-at-point-p.

	  * Do not add end again if space or return is hit repeatedly
	    after a block beginning keyword.

Fri Oct 11 18:12:47 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/gc_hook.c: prohibit reentrant.

Fri Oct 11 18:11:34 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c (rb_postponed_job_flush): fix bit operation.

Fri Oct 11 17:33:24 2013  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el: Import ruby-electric.el 2.0 from
	  https://github.com/knu/ruby-electric.el which integrates changes
	  from another fork by @qoobaa.

	  * Allow ruby-electric-mode to be disabled by introducing a
	    dedicated key map.  Electric key bindings are now defined in
	    ruby-electric-mode-map instead of overwriting ruby-mode-map.

	  * Add ruby-electric-mode-hook.