@@ -578,7 +578,7 @@ int rb_is_local_name(VALUE name);
 int rb_is_method_name(VALUE name);
 int rb_is_junk_name(VALUE name);
 void rb_gc_mark_parser(void);
-void rb_gc_mark_symbols(int full_marking);
+void rb_gc_mark_symbols(int full_mark);
 
 /* proc.c */
 VALUE rb_proc_location(VALUE self);
