@@ -1,3 +1,7 @@
+Fri Oct 11 21:05:19 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* internal.h, parse.y: use `full_mark' instead of `full_marking'.
+
 Fri Oct 11 20:58:16 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c: use terminology `full_mark' instead of `minor_gc'
